--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -214,7 +214,7 @@
                     </div>
                     <div>
                         <h6 class="mb-1">Database Status</h6>
-                        <span class="badge bg-success">Online</span>
+                        <span class="badge bg-success">Online - Localy</span>
                     </div>
                 </div>
                 
@@ -224,7 +224,7 @@
                     </div>
                     <div>
                         <h6 class="mb-1">Firebase Status</h6>
-                        <span class="badge bg-info">Connected</span>
+                        <span class="badge bg-info">Not-Connected</span>
                     </div>
                 </div>
                 
